fixed name not wrapping in div

--- a/react-app/src/components/WhosWatching/WhosWatching.module.css
+++ b/react-app/src/components/WhosWatching/WhosWatching.module.css
@@ -93,6 +93,9 @@
 
 #profileName{
     margin-top: 20px;
+    overflow-wrap: break-word;
+    width: 140px;
+    text-align: center;
 }
 
 
